added overdue chip; completed subtask feature implementation in completed tasks view

--- a/todo-app/angular.json
+++ b/todo-app/angular.json
@@ -33,7 +33,7 @@
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [
-              "dayjs"
+              "moment"
             ]
           },
           "configurations": {
